[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
stylist = {version = "0.12.1", features = ["yew_integration"]}
web-sys = "0.3.64"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.24"
js-sys = "0.3.64"
yew-router = "0.17"
serde_json = "1.0.99"
serde = "1.0.164"
